SeatPM_Workspace_Folder/SeatPM_Project.cydsn/BUILD.log
--------------- Build Started: 05/19/2020 10:13:28 Project: SeatPM_Project, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I.\Austins_Component_Drivers -I.\Austins_Component_Drivers\Goniometer -I.\Austins_Component_Drivers\Goniometer\Acceleration_Vector -I.\Austins_Component_Drivers\Goniometer\ADXL345 -I.\Austins_Component_Drivers\Goniometer\Moving_Average_Filter -I.\Austins_Component_Drivers\User_Interface -I.\Austins_Component_Drivers\User_Interface\Finite_State_Machine -I.\Austins_Component_Drivers\User_Interface\UI_Buttons -I.\Austins_Component_Drivers\Goniometer\Accelerometer -I.\Austin_Parameter -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Os -c main.c -o .\CortexM0\ARM_GCC_541\Debug\main.o
main.c: In function 'main':
main.c:51:52: error: expected expression before ')' token
     Parameter_Constructor(g_MinimumAngle, 90, 180, )
                                                    ^
main.c:51:27: error: incompatible type for argument 1 of 'Parameter_Constructor'
     Parameter_Constructor(g_MinimumAngle, 90, 180, )
                           ^
In file included from .\Austins_Component_Drivers\User_Interface/user_interface_fsm.h:26:0,
                 from main.c:11:
.\Austin_Parameter/austin_parameter.h:51:6: note: expected 'Parameter * {aka struct Parameter *}' but argument is of type 'Parameter {aka struct Parameter}'
 bool Parameter_Constructor(Parameter *me,
      ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 05/19/2020 10:13:37 ---------------
